src/test/ui/asm/x86_64/srcloc.stderr
error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:10:15
   |
LL |         asm!("invalid_instruction");
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:14:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:19:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:25:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:32:13
   |
LL |             invalid_instruction
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:13
   |
LL |             invalid_instruction
   |             ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:37:14
   |
LL |         asm!(concat!("invalid", "_", "instruction"));
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

warning: scale factor without index register is ignored
  --> $DIR/srcloc.rs:40:15
   |
LL |         asm!("movaps %xmm3, (%esi, 2)", options(att_syntax));
   |               ^
   |
note: instantiated into assembly here
  --> <inline asm>:1:23
   |
LL |     movaps %xmm3, (%esi, 2)
   |                          ^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:44:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction
   |     ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:50:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:57:14
   |
LL |             "invalid_instruction",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:64:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction'
  --> $DIR/srcloc.rs:71:13
   |
LL |             concat!("invalid", "_", "instruction"),
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction
   | ^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:78:14
   |
LL |             "invalid_instruction1",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:79:14
   |
LL |             "invalid_instruction2",
   |              ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:85:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:85:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:94:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:94:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:98:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:4:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:98:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction1'
  --> $DIR/srcloc.rs:109:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:2:2
   |
LL |     invalid_instruction1
   |     ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction2'
  --> $DIR/srcloc.rs:109:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:3:1
   |
LL | invalid_instruction2
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction3'
  --> $DIR/srcloc.rs:113:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:5:1
   |
LL | invalid_instruction3
   | ^^^^^^^^^^^^^^^^^^^^

error: invalid instruction mnemonic 'invalid_instruction4'
  --> $DIR/srcloc.rs:113:13
   |
LL |             concat!(
   |             ^
   |
note: instantiated into assembly here
  --> <inline asm>:6:1
   |
LL | invalid_instruction4
   | ^^^^^^^^^^^^^^^^^^^^

error: aborting due to 23 previous errors; 1 warning emitted

